<resources>
    <string name="app_name" translatable="false">Demo</string>
    <string name="btn_login">Login</string>
    <string name="app_ver">1.0.1Beta</string>
    <string name="btn_signup">Register</string>
    <string name="image_description">jluLogo</string>
    <string name="hint_user">username</string>
    <string name="hint_pwd">password</string>
    <string name="thumb_up">thumb_up</string>
    <string name="thumb_down">thumb_down</string>
    <string name="TestView">testView</string>
    <string name="tv_user">username:</string>
    <string name="tv_passwd">password:</string>
    <string name="welcome">welcome,please wait</string>
    <string name="home">Home</string>
    <string name="home_page">home_page</string>
    <string name="cart">cart</string>
    <string name="order">order</string>
    <string name="user">user</string>
    <string name="signout">signOut</string>
    <string name="userimage">UserImage</string>
    <string name="password">**********</string>
    <string name="refresh">refresh</string>
    <string name="alert_update">click username to update userInfo</string>
    <string name="goback">goback</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

<!--    <string name="app_name">Alipay SDK Demo</string>-->
    <string name="demo_info_text">Warning: \n\nFor demonstration purpose, the assembling and signing of the request parameters are done on the client side.\nHowever, in practice, both assembling and signing MUST BE carried out on the server side.</string>
    <string name="pay_with_alipay">Pay with Alipay</string>
    <string name="pay_with_alipay_hk">Pay with AlipayHK</string>
    <string name="auth_with_alipay">Authenticate with Alipay</string>
    <string name="web_to_native">Call Alipay from Web Content</string>
    <string name="check_sdk_version">Alipay SDK Version</string>
    <string name="pay_success">Payment success:</string>
    <string name="auth_failed">Authentication failed:</string>
    <string name="error_missing_appid_rsa_private">Error: Missing \"APPID\" or \"RSA_PRIVATE\" in PayDemoActivity.</string>
    <string name="error_missing_hk_partner_seller_rsa_private">Error: Missing \"PARTNER\", \"SELLER\", or \"RSA_PRIVATE\\ in OrderUtils1_0_HK.</string>
    <string name="pay_result">Payment result:</string>
    <string name="error_auth_missing_partner_appid_rsa_private_target_id">Error: Missing \"PARTNER\", \"APP_ID\", \"RSA_PRIVATE\", or \"TARGET_ID\" in PayDemoActivity.</string>
    <string name="confirm">Confirm</string>
    <string name="pay_failed">Payment failed:</string>
    <string name="auth_success">Authentication success:</string>
    <string name="alipay_sdk_version_is">"Alipay SDK version: "</string>
    <string name="error_missing_h5_pay_url">Missing URL to load. Please configure in PayDemoActivity.h5Pay()</string>
    <string name="error">Error</string>
    <string name="pay_cross_border">Cross-border Pay with Alipay</string>
    <string name="error_missing_global_partner_seller_rsa_private" >Error: Missing \"PARTNER\", \"SELLER\", or \"RSA_PRIVATE\\ in OrderUtils1_0_Global.</string>
    <string name="payment_inst_hk">Payer: HK</string>
    <string name="payment_inst_cn">Payer: CN</string>
    <string name="productImg">productImg</string>
    <string name="cartAdd">cart_add</string>

</resources>
